# auto_ohouse

./: Dockerfile  Dockerfile_ui_auto  README.md  pyproject.toml  requirements.txt
AI_agent_web/pages/: dr_oh.py
API/config/: url.py
config_server/: flask_mcp_server.py  local_mcp_server.py
fast_api_active/: fast_api_run.py  wda_run_prod.py  wda_run_st_rt.py  wda_stop_prod2.py
fast_api_active/ios_local_method/: app_restart.py  del_app.py
flask_active/: cache_manager.py  flask_run.py  github_pull.py  jenkins_monitoring.py  jenkins_trigger.py  jira_formatter.py  kafka_handler.py  parallel_runner.py  version_func.py
flask_active/slack_command/: modal.py
flask_active/test_running_check/: running_value_provider.py
mcp_automation/: mcp_server_module.py
mcp_automation/auto_locator_fix/: AI_find_locator.py  AI_locator_handler.py  find_case_method.py  locator_update_method.py
mcp_automation/auto_ui_runner/: android_AI_testrunner.py  ios_AI_testrunner.py
production/braze/: aos_braze_runner.py  braze_runner.py  ios_braze_runner.py
production/common/: prod_test_run.py
production/web/: conftest.py  jenkins_prod_web_testrunner_bdd.py  pytest.ini  requirments.txt
qa_mcp_server/: mcp_server_test_case_maker.py  mcp_server_test_scope.py  msg_manager.py
qa_mcp_server/figma/: get_data_figma.py
qa_mcp_server/qa_scope_module/: read_content.py  scope_func.py  token_manager.py
qa_mcp_server/slack_func/: send_slack_msg.py
report/: common_method.py  create_log.py  create_report.py  read_dict_result.py  slack_webhook.py
web/: test_runner.py
(+198 files in other folders)
