[project]
name = "ohs-qa-automation"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiohttp>=3.12.13",
    "appium-python-client>=2.11.1",
    "behave>=1.2.6",
    "google-api-python-client>=2.173.0",
    "google-genai>=1.22.0",
    "gspread>=6.2.1",
    "mysql-connector-python>=9.3.0",
    "playwright>=1.53.0",
    "pytest>=8.4.1",
    "pytest-bdd>=8.1.0",
    "requests>=2.32.3",
    "selenium>=4.33.0",
    "slack-sdk>=3.35.0",
    "webdriver-manager>=4.0.2",
]
