[project]
name = "ohs-ai-qa"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11.4"
dependencies = [
    "dotenv>=0.9.9",
    "google-generativeai>=0.8.5",
    "mcp>=1.8.1",
    "openai>=1.78.1",
    "playwright>=1.53.0",
    "qdrant-client>=1.14.2",
    "streamlit>=1.45.0",
]
